// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the board correctly 1`] = `
Array [
  <Image
    source={1}
    style={
      Array [
        Object {
          "width": "66.666667%",
        },
        Object {
          "resizeMode": "contain",
        },
      ]
    }
    testID="X"
  />,
  <Image
    source={1}
    style={
      Array [
        Object {
          "width": "66.666667%",
        },
        Object {
          "resizeMode": "contain",
        },
      ]
    }
    testID="X"
  />,
]
`;

exports[`should render the board correctly 2`] = `
Array [
  <Image
    source={1}
    style={
      Array [
        Object {
          "width": "66.666667%",
        },
        Object {
          "resizeMode": "contain",
        },
      ]
    }
    testID="O"
  />,
]
`;
